# quarcc-trading-engine

./: .gitignore
contracts/: CMakeLists.txt  execution.proto  execution_service.proto  gateway_adapter_service.proto  market_data.proto  strategy_signal.proto
engine-cpp/: CMakeLists.txt
engine-cpp/include/trading/core/: adapter_manager.h  feed_registry.h  order_manager.h  poll_scheduler.h  position_keeper.h  trading_engine.h
engine-cpp/include/trading/gateways/: adapter_connection.h  alpaca_fix_gateway.h  grpc_gateway.h  grpc_market_data_feed.h  paper_trading_gateway.h  simulated_feed.h
engine-cpp/include/trading/grpc/: grpc_server.h
engine-cpp/include/trading/interfaces/: i_execution_gateway.h  i_execution_service_handler.h  i_journal.h  i_market_data_feed.h
engine-cpp/include/trading/utils/: config.h  event_queue.h  order_id_types.h  result.h
engine-cpp/src/: CMakeLists.txt  main.cpp
engine-cpp/src/core/: CMakeLists.txt  adapter_manager.cpp  feed_registry.cpp  order_manager.cpp  poll_scheduler.cpp  position_keeper.cpp  trading_engine.cpp
engine-cpp/src/gateways/: CMakeLists.txt  alpaca_fix_gateway.cpp  grpc_gateway.cpp  grpc_market_data_feed.cpp  paper_trading_gateway.cpp  simulated_feed.cpp
engine-cpp/src/grpc/: CMakeLists.txt  grpc_server.cpp
engine-cpp/src/persistence/: CMakeLists.txt  sqlite_journal.cpp  sqlite_order_store.cpp
engine-cpp/tests/helpers/: proto_builders.h
engine-cpp/tests/mocks/: mock_execution_gateway.h
engine-cpp/tests/scripts/: validate_dbs.py
engine-cpp/tests/unit/: test_order_manager.cpp  test_position_keeper.cpp  test_sqlite_order_store.cpp
python_client/: client.py  config.yaml  grpc_interface.py  momentum.py  requirements.txt  strategy.py  strategy_example.py
python_client/adapters/: adapter.py
python_client/strategy/: base_strategy.py  config.py
scripts/: db_order_debug.sh  dev.sh
